--- a/src/pages/fr/insights/[...slug].astro
+++ b/src/pages/fr/insights/[...slug].astro
@@ -52,7 +52,7 @@ const pageTitle: string = `${post.data.title} | ${SITE.title}`;
               </div>
             </div>
             <p class="text-pretty text-sm font-light text-neutral-500">
-              Table of Contents:
+              Table des Matières:
             </p>
             <div id="toc" class="">
               <ul
@@ -75,21 +75,21 @@ const pageTitle: string = `${post.data.title} | ${SITE.title}`;
           >
             <Content />
             <ul>
-            <li style={{ marginBottom: '20px', marginTop: '20px'}}><PrimaryCTA title="Official Link" url={post.data.officialLink} /></li>
-            <li style={{ marginBottom: '20px' }}><PrimaryCTA title="Apply Now" url={post.data.applyNowLink} /></li>
-            <li style={{ marginBottom: '20px' }}><PrimaryCTA title="Apply through our support team" url={post.data.teamApplyLink} /></li>
+            <li style={{ marginBottom: '20px', marginTop: '20px'}}><PrimaryCTA title="Lien Officiel" url={post.data.officialLink} /></li>
+            <li style={{ marginBottom: '20px' }}><PrimaryCTA title="Postulez dès Maintenant" url={post.data.applyNowLink} /></li>
+            <li style={{ marginBottom: '20px' }}><PrimaryCTA title="Postulez par l’intermédiaire de notre équipe d’assistance" url={post.data.teamApplyLink} /></li>
             </ul> 
             <section
   class="mx-auto mt-10 max-w-[85rem] px-4 py-10 sm:px-6 sm:py-16 lg:px-8 lg:py-14 2xl:max-w-full"
 >
   <div class="max-w-screen-md">
-    <h3 style="text-align: center;">Have you subscribed to the YouTube channel or the Telegram channel for scholarships?</h3>
+    <h3 style="text-align: center;">Vous êtes-vous abonné à la chaîne YouTube ou à la chaîne Telegram pour les bourses ?</h3>
 
     <!-- Section subtitle -->
     <p
       class="mb-8 max-w-prose text-pretty font-light text-neutral-600 dark:text-neutral-400 sm:text-xl"
     >
-    Be the first to know about our Opportunities as soon as they are released. 
+    Soyez le premier à connaître nos possibilités dès qu’elles sont publiées. 
   </p>
     <!-- Conditional rendering of PrimaryCTA component if 'btnExists' property is truthy -->
     <div style="display: flex; justify-content: center; gap: 10px; margin-top: 15px;">
