--- a/src/pages/fr/services.astro
+++ b/src/pages/fr/services.astro
@@ -46,21 +46,21 @@ const pageTitle: string = `Services | ${SITE.title}`;
     <h1
       class="mb-4 text-balance text-4xl font-extrabold tracking-tight text-neutral-800 dark:text-neutral-200"
     >
-    <span class="text-yellow-500 dark:text-yellow-400">Paid Services</span>
+    <span class="text-yellow-500 dark:text-yellow-400">Services Payant</span>
     </h1>
 </div>
   <MainSection
-    title="Application Assistance"
-    subTitle="Get personalized support from our expert team to enhance your application for scholarships, internships, jobs, or PhD programs, significantly increasing your chances of success."
+    title="Assistance d'Application"
+    subTitle="Obtenez un soutien personnalisé de notre équipe d’experts pour améliorer votre demande de bourses, stages, emplois ou programmes de doctorat, augmentant ainsi vos chances de succès."
     btnExists={true}
-    btnTitle="Schedule a Consultation"
+    btnTitle="Demander une Consultation"
     btnURL="#"
   />
   <MainSection
-    title="Counseling Sessions"
-    subTitle="Receive expert guidance on choosing the right college major, finding your career path, crafting an impressive resume, and mastering interview techniques. Our counselors specialize in both education and employment, ensuring you are well-prepared for your future."
+    title="Séances de Consultation"
+    subTitle="Recevez des conseils d’experts sur le choix de la bonne majeure du collège, trouver votre cheminement de carrière, élaborer un curriculum vitae impressionnant et maîtriser les techniques d’entrevue. Nos conseillers sont spécialisés dans l’éducation et l’emploi, ce qui vous assure d’être bien préparé pour votre avenir."
     btnExists={true}
-    btnTitle="Schedule a Consultation"
+    btnTitle="Demander une Consultation"
     btnURL="#"
   />
 <!-- Free -->  
@@ -68,22 +68,22 @@ const pageTitle: string = `Services | ${SITE.title}`;
     <h1
       class="mb-4 text-balance text-4xl font-extrabold tracking-tight text-neutral-800 dark:text-neutral-200"
     >
-    <span class="text-yellow-500 dark:text-yellow-400">Free Services</span>
+    <span class="text-yellow-500 dark:text-yellow-400">Services Gratuits</span>
     </h1>
 </div>
   <MainSection
-    title="Educational Opportunities"
-    subTitle="Access a wide range of scholarships, fellowships, and grants designed to support your academic journey."
+    title="Opportunités éducatives"
+    subTitle="Accédez à un large éventail de bourses d’études, de bourses et de subventions conçues pour soutenir votre parcours académique."
     btnExists={false}
   />
   <MainSection
-    title="Job and Internship Listings"
-    subTitle="Explore curated job and internship opportunities tailored to various industries and experience levels."
+    title="Offres d’emploi et de stage"
+    subTitle="Explorez des possibilités d’emploi et de stage adaptées à divers secteurs et niveaux d’expérience."
     btnExists={false}
   />
   <MainSection
-    title="Online Courses"
-    subTitle="Discover both free and paid courses across all fields of knowledge, helping you develop new skills and advance your career."
+    title="Formations en ligne"
+    subTitle="Découvrez des cours gratuits et payants dans tous les domaines de la connaissance, vous aidant à développer de nouvelles compétences et faire progresser votre carrière."
     btnExists={false}
   />
 
