--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -20,15 +20,15 @@ const defaultLang: TranslationKeys = "en";
 const translations: Translations = {
   en: {
     pageTitle: `Page Not Found | ${SITE.title}`,
-    subTitle: "Oops, this isn't the tool you were looking for!",
-    content: "Don't let this hiccup slow you down. Let's get you back to building your masterpiece.",
+    subTitle: "Oops Page Not Found!",
+    content: "",
     btnTitle: "Go Back",
   },
   fr: {
-    pageTitle: `Page Non Trouvée | ${SITE.title}`,
-    subTitle: "Oops, ce n'est pas l'outil que vous recherchiez!",
-    content: "Ne laissez pas ce contretemps vous ralentir. Revenons à la construction de votre chef-d'œuvre.",
-    btnTitle: "Retournez",
+    pageTitle: `الصفحة غير موجودة | ${SITE.title}`,
+    subTitle: "عذرًا الصفحة غير موجودة",
+    content: "",
+    btnTitle: "العودة"
   }
 };
 
