--- a/src/pages/fr/contact.astro
+++ b/src/pages/fr/contact.astro
@@ -6,7 +6,7 @@ import ContactSection from "@components/sections/fr/ContactSection_fr.astro";
 
 <!--Utilizing MainLayout for the outer layout of the page, and defining meta for SEO purposes-->
 <MainLayout
-  title="Contact | ScrewFast"
+  title="تواصل معنا | نبذة"
   lang="fr"
   structuredData={{
     "@context": "https://schema.org",
@@ -28,3 +28,5 @@ import ContactSection from "@components/sections/fr/ContactSection_fr.astro";
 >
   <ContactSection />
 </MainLayout>
+
+
