--- a/src/pages/fr/services.astro
+++ b/src/pages/fr/services.astro
@@ -25,51 +25,51 @@ const pageTitle: string = `Services | ${SITE.title}`;
   }}
 >
 
-<!-- Paid -->
+<!-- الخدمات المدفوعة -->
 <div class="max-w-screen-md pt-20">
-    <h1
-      class="mb-4 text-balance text-4xl font-extrabold tracking-tight text-neutral-800 dark:text-neutral-200"
-    >
-    <span class="text-yellow-500 dark:text-yellow-400">Services Payant</span>
-    </h1>
+  <h1
+    class="mb-4 text-balance text-4xl font-extrabold tracking-tight text-neutral-800 dark:text-neutral-200"
+  >
+  <span class="text-yellow-500 dark:text-yellow-400">الخدمات المدفوعة</span>
+  </h1>
 </div>
-  <MainSection
-    title="Assistance d'Application"
-    subTitle="Obtenez un soutien personnalisé de notre équipe d’experts pour améliorer votre demande de bourses, stages, emplois ou programmes de doctorat, augmentant ainsi vos chances de succès."
-    btnExists={true}
-    btnTitle="Demander une Consultation"
-    btnURL="#"
-  />
-  <MainSection
-    title="Séances de Consultation"
-    subTitle="Recevez des conseils d’experts sur le choix de la bonne majeure du collège, trouver votre cheminement de carrière, élaborer un curriculum vitae impressionnant et maîtriser les techniques d’entrevue. Nos conseillers sont spécialisés dans l’éducation et l’emploi, ce qui vous assure d’être bien préparé pour votre avenir."
-    btnExists={true}
-    btnTitle="Demander une Consultation"
-    btnURL="#"
-  />
-<!-- Free -->  
+<MainSection
+  title="المساعدة في التقديم"
+  subTitle="احصل على دعم شخصي من فريق خبرائنا لتحسين طلبك للمنح الدراسية، التدريبات، الوظائف أو برامج الدكتوراه، مما يزيد من فرص نجاحك."
+  btnExists={true}
+  btnTitle="طلب استشارة"
+  btnURL="#"
+/>
+<MainSection
+  title="جلسات استشارية"
+  subTitle="احصل على نصائح من الخبراء حول اختيار التخصص الجامعي المناسب، العثور على مسارك المهني، إعداد سيرة ذاتية مميزة، وإتقان تقنيات المقابلة. مستشارونا متخصصون في التعليم والتوظيف، مما يضمن لك الإعداد الجيد لمستقبلك."
+  btnExists={true}
+  btnTitle="طلب استشارة"
+  btnURL="#"
+/>
+<!-- الخدمات المجانية -->
 <div class="max-w-screen-md pt-20">
-    <h1
-      class="mb-4 text-balance text-4xl font-extrabold tracking-tight text-neutral-800 dark:text-neutral-200"
-    >
-    <span class="text-yellow-500 dark:text-yellow-400">Services Gratuits</span>
-    </h1>
+  <h1
+    class="mb-4 text-balance text-4xl font-extrabold tracking-tight text-neutral-800 dark:text-neutral-200"
+  >
+  <span class="text-yellow-500 dark:text-yellow-400">الخدمات المجانية</span>
+  </h1>
 </div>
-  <MainSection
-    title="Opportunités éducatives"
-    subTitle="Accédez à un large éventail de bourses d’études, de bourses et de subventions conçues pour soutenir votre parcours académique."
-    btnExists={false}
-  />
-  <MainSection
-    title="Offres d’emploi et de stage"
-    subTitle="Explorez des possibilités d’emploi et de stage adaptées à divers secteurs et niveaux d’expérience."
-    btnExists={false}
-  />
-  <MainSection
-    title="Formations en ligne"
-    subTitle="Découvrez des cours gratuits et payants dans tous les domaines de la connaissance, vous aidant à développer de nouvelles compétences et faire progresser votre carrière."
-    btnExists={false}
-  />
+<MainSection
+  title="فرص تعليمية"
+  subTitle="احصل على مجموعة واسعة من المنح الدراسية والدعم المالي المصمم لدعم مسارك الأكاديمي."
+  btnExists={false}
+/>
+<MainSection
+  title="عروض العمل والتدريب"
+  subTitle="استكشف فرص العمل والتدريب المناسبة لمختلف القطاعات ومستويات الخبرة."
+  btnExists={false}
+/>
+<MainSection
+  title="دورات تدريبية عبر الإنترنت"
+  subTitle="اكتشف دورات مجانية ومدفوعة في جميع مجالات المعرفة، لمساعدتك على تطوير مهارات جديدة والتقدم في حياتك المهنية."
+  btnExists={false}
+/>
 
 
 </MainLayout>
