--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -23,6 +23,9 @@ We set the language of the page to English and add classes for scrollbar and scr
 -->
 <html lang={lang} class="scrollbar-hide lenis lenis-smooth scroll-pt-16">
   <head>
+    <!-- Adding the Google AdSense script to the head of the document -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7051727852360622"
+     crossorigin="anonymous"></script>
     <!-- Adding metadata to the HTML document -->
     <Meta meta={meta} structuredData={structuredData} />
     <!-- Define the title of the page -->
