--- a/src/components/ui/banners/AnnouncementBanner.astro
+++ b/src/components/ui/banners/AnnouncementBanner.astro
@@ -20,9 +20,9 @@ interface Props {
      data-ad-format="auto"
      data-full-width-responsive="true">
     </ins>
-<script>
+<!-- <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script> -->
 </astro-banner>
 <script>
   class AstroBanner extends HTMLElement {
