--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -6,7 +6,7 @@ import FooterSection from "@components/sections/navbar&footer/FooterSection.astr
 import { SITE } from "@data/constants";
 
 // Setting expected props
-const { title = SITE.title, meta, structuredData, lang = "en" } = Astro.props;
+const { title = SITE.title, meta, structuredData, lang = Astro.currentLocale } = Astro.props;
 
 // Interface to type-check the properties
 interface Props {
@@ -21,7 +21,8 @@ interface Props {
 This is the main structure for the page.
 We set the language of the page to English and add classes for scrollbar and scroll behavior.
 -->
-<html lang={lang} class="scrollbar-hide lenis lenis-smooth scroll-pt-16">
+
+<html lang={lang} class="scrollbar-hide lenis lenis-smooth scroll-pt-16" dir={lang=='fr' ? "rtl" : "ltr"}>
   <head>
     <!-- Adding the Google AdSense script to the head of the document -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2903791429686147"
