solve nav bar dir

--- a/src/components/sections/navbar&footer/Navbar.astro
+++ b/src/components/sections/navbar&footer/Navbar.astro
@@ -15,6 +15,7 @@ const homeUrl = Astro.currentLocale === "fr" ? "/fr" : "/";
 <!-- Main header component -->
 <header
   class="sticky inset-x-0 top-4 z-50 flex w-full flex-wrap text-sm md:flex-nowrap md:justify-start"
+  dir="ltr"
 >
   <!-- Navigation container -->
   <nav
