--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -22,7 +22,7 @@ This is the main structure for the page.
 We set the language of the page to English and add classes for scrollbar and scroll behavior.
 -->
 
-<html lang={lang} class="scrollbar-hide lenis lenis-smooth scroll-pt-16" dir={lang=='fr' ? "rtl" : "ltr"}>
+<html lang={lang} class="scrollbar-hide lenis lenis-smooth scroll-pt-16" >
   <head>
     <!-- Adding the Google AdSense script to the head of the document -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2903791429686147"
@@ -56,7 +56,7 @@ We set the language of the page to English and add classes for scrollbar and scr
     -->
     <div class="mx-auto max-w-screen-2xl px-4 sm:px-6 lg:px-8">
       <Navbar />
-      <main>
+      <main dir={lang=='fr' ? "rtl" : "ltr"} >
         <slot />
       </main>
     </div>
